# semestic-review

./: LICENSE
rust-spfresh-services/: Cargo.toml  README.md
rust-spfresh-services/.toolchains/mingw64/lib/python3.9/lib-dynload/: _bisect.cp39-mingw_x86_64_ucrt.pyd  _blake2.cp39-mingw_x86_64_ucrt.pyd  _codecs_cn.cp39-mingw_x86_64_ucrt.pyd  _codecs_hk.cp39-mingw_x86_64_ucrt.pyd  _codecs_iso2022.cp39-mingw_x86_64_ucrt.pyd  _codecs_jp.cp39-mingw_x86_64_ucrt.pyd  _codecs_kr.cp39-mingw_x86_64_ucrt.pyd  _codecs_tw.cp39-mingw_x86_64_ucrt.pyd  _contextvars.cp39-mingw_x86_64_ucrt.pyd  _ctypes_test.cp39-mingw_x86_64_ucrt.pyd  _datetime.cp39-mingw_x86_64_ucrt.pyd  _decimal.cp39-mingw_x86_64_ucrt.pyd  _elementtree.cp39-mingw_x86_64_ucrt.pyd  _hashlib.cp39-mingw_x86_64_ucrt.pyd  _md5.cp39-mingw_x86_64_ucrt.pyd  _multibytecodec.cp39-mingw_x86_64_ucrt.pyd  _multiprocessing.cp39-mingw_x86_64_ucrt.pyd  _opcode.cp39-mingw_x86_64_ucrt.pyd  _overlapped.cp39-mingw_x86_64_ucrt.pyd  _pickle.cp39-mingw_x86_64_ucrt.pyd  _queue.cp39-mingw_x86_64_ucrt.pyd  (+16 more)
rust-spfresh-services/.toolchains/mingw64/share/info/: gcc.info
rust-spfresh-services/data/: reviews.index  reviews.jsonl
rust-spfresh-services/spfresh/: Cargo.toml  lib.rs
rust-spfresh-services/src/: index.rs  index_spfresh.rs  main.rs  meta_store.rs
rust-spfresh-ui/: Cargo.toml  README.md  Trunk.toml  index.html
rust-spfresh-ui/.cargo/: config.toml
rust-spfresh-ui/.toolchains/mingw64/: version_info.txt
rust-spfresh-ui/.toolchains/mingw64/share/info/: gccint.info
rust-spfresh-ui/src/: app.rs  main.rs
(+38 files in other folders)
