[package]
name = "rust-spfresh-services"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
parking_lot = "0.12"
ndarray = "0.15"
ordered-float = "4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
spfresh = { path = "spfresh" }  # <- ต้องมีโฟลเดอร์ spfresh อยู่ข้างๆ โปรเจ็กต์นี้
fastembed = { version = "5", optional = true }
http = "1.3.1"   # <- ทำให้เป็น optional เพื่อไม่ดึง ort-sys บน GNU

[features]
default = ["with-spfresh"]
with-spfresh = []
