[package]
name = "rust-spfresh-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.5", features = ["json"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlTextAreaElement"] }
console_error_panic_hook = "0.1" 